<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/the_sharp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/button_txt_signup_main"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/join_name"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/edit_txt_hint_user_name_main"
        android:inputType="text"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:paddingLeft="15dp"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/join_dong"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_dong_main"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/join_ho"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_ho_main"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/join_id"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_id_main"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/join_password"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_password_main"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/edit_txt_hint_user_password"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/btn_signup_main"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@color/colorTheSharpDarkGreyBlue"
        android:text="@string/button_txt_signup_main"
        android:textColor="@color/colorBackground" />


</LinearLayout>