<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_appVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="20dp"
        android:text="1.2.6" />

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        android:contentDescription="@string/img_description_main"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/splash_image" />

    <EditText
        android:id="@+id/et_id_login"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_name_main"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/edit_txt_hint_user_password_main"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/colorTheSharpDarkNavyBlue"
        android:textSize="15dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTheSharpDarkGreyBlue"
        android:text="@string/button_txt_login_main"
        android:textColor="@color/colorBackground" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical|center"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk_remember_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:buttonTint="@color/colorTheSharpDarkGreyBlue"
            android:checked="true"
            android:text="@string/check_txt_remember_main"
            android:textColor="@color/colorTheSharpDarkNavyBlue"
            android:textSize="10dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chk_Open_Door"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/colorTheSharpDarkGreyBlue"
            android:checked="false"
            android:text="주차 서비스 사용하기"
            android:textColor="@color/colorTheSharpDarkGreyBlue"
            android:textSize="10dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_result_login"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/textview_txt_remember_info_main"
        android:textSize="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="운전자가 아니신경우 문열림 기능만 사용하기 체크박스를 체크하여 주십시오"
        android:textColor="@color/colorError"
        android:textSize="10dp"
        android:textStyle="bold" />

</LinearLayout>